--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,6 +1,7 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions
-on: [push]
+on:
+  push:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -17,7 +18,7 @@ jobs:
       - run: echo " This job's status is ${{ job.status }}."
       - run: echo " This job's status is ${{ job.status }}."
       - name: Use Node.js
-      uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '20.x'
       - run: npm ci
